bluegreen/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-bluegreen-demo
  labels:
    app: rollouts-bluegreen-demo
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-bluegreen-demo
