bluegreen/gateway-preview.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rollouts-demo-preview
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - rollouts-demo-preview.apps.local
    port:
      name: http
      number: 80
      protocol: HTTP
